# Africulture

./: agri_mcp_tools.md  cors_proxy_production.py  pyproject.toml  render-pathwise.yaml  requirements-pathwise.txt  testresponse.json
AfricultureAI.egg-info/: PKG-INFO  SOURCES.txt
nigeria_pathwise/: pyproject.toml
nigeria_pathwise/configs/: config.yml
nigeria_pathwise/src/nigeria_pathwise.egg-info/: PKG-INFO  entry_points.txt
nigeria_pathwise/src/nigeria_pathwise/configs/: config.yml
soil_land/: pyproject.toml
soil_land/configs/: config.yml
soil_land/src/soil_land/: register.py  soil_land_function.py
soil_land/src/soil_land.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
soil_land/src/soil_land/configs/: config.yml
weather_climate/: pyproject.toml
weather_climate/configs/: config.yml
weather_climate/src/weather_climate/: register.py  weather_climate_function.py
weather_climate/src/weather_climate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
weather_climate/src/weather_climate/configs/: config.yml
